	- Fixed GM holding files open and causing the time stamp to be incorrect. This caused GM to require a '/mansave force' when it shouldn't be needed.
	- Fixed a crash on reload due to bukkit not unloading plugins before reloading.
v 1.6:
	- Prevent Group.equals tests throwing a NullPointerException for GlobalGroups.
	- Stop throwing errors on an empty users file.
	- Optimize sorting to speedup permission tests.
	- Fix superperms to pass all tests http://dev.bukkit.org/server-mods/superpermstest/
	- Optimizations include changing the return of comparePermissionString.
	- Added file details in error messages for loading groups/users.
v 1.7:
	- GM now supports offline players without having to mantogglevalidate
	- Offline player checks now support partial name matches.
	- Added custom events so plugins can now be notified of changes within GroupManager.
	- GM now registers with Bukkits ServicesManager.
	- deleting the contents of GlobalGroups.yml will no longer thrown a NullPointerException.
	- Removed op permissions from admins in the default GloblaGroups.yml.
v 1.8:
	- Changed ServicesManager registration to lowest from normal.
	- Fixed 'manucheckp' returning a null for the searched node when it's a group/subgroup.
	- manpromote and mandemote now correctly send the notification to the console if the command was issued there.
	- Expanded GlobalGroups.yml and Groups.yml to include Towny permissions.
	- Delayed GroupManager events so Superperms will be fully updated before plugins receive the events.
	- Changed the way events are raised to prevent variable corruption.
	- Reload GlobalGroups when you perform a world load.
	- Changed GlobalGroups to save/load before local groups in the scheduled data saving/loading
	- Fix 'manucheckp' to correctly report if a permission is available from GroupManager or Bukkit.
	- Changed over to a reflection method for populating superperms as Bukkit lags when you handle permissions one at a time.